# shopping_cart

./: .gitignore  LICENSE
backend/: pyproject.toml
backend/django-app/authentication/: models.py  views.py
backend/django-app/authentication/api/: jwt.py  permissions.py  serializers.py  views.py
backend/django-app/authentication/migrations/: 0001_initial.py
backend/django-app/core/: settings.py  urls.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  userpool.jsx
frontend/src/components/: Dashboard.jsx  Login.jsx
frontend/src/network/: auth.jsx  axios_private.jsx  userpool.jsx
frontend/src/pages/auth/: Signin.jsx  Signup.jsx
frontend/src/pages/dashboard/: index.jsx
frontend/src/pages/landing_page/: Home.jsx
frontend/src/routes/: private_router.jsx
frontend/src/services/: authenticate.js  authenticate.jsx
frontend/src/store/: AuthStore.jsx
