[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the shopping cart"
authors = ["Leroy Pereira <leroy.pereira@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
cryptography = "^43.0.1"
drf-jwt = "^1.19.2"
pyjwt = "^2.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
